改一些BUG
